testsuite/tests/checks/unconditional_exits/test.out
exits.adb:8:10: error: exit statement does not contain condition
8 |          exit;             --  FLAG
  |          ^^^^^ 

